@@ -29,6 +29,7 @@
     <property environment="env"/>
     <property file="build.properties" />
     <property file="build.properties.default" />
+    <property file="${user.home}/.ant/build.properties"/>
     <property name="debuglevel" value="source,lines,vars"/>
 
     <!-- default version and SCM information -->
@@ -72,6 +73,7 @@
     <property name="test.classlistfile" value="testlist.txt"/>
     <property name="test.classlistprefix" value="unit"/>
     <property name="benchmark.name" value=""/>
+    <property name="jmh.args" value=""/>
     <property name="test.methods" value=""/>
     <property name="test.anttasks.src" value="${test.dir}/anttasks"/>
     <property name="test.unit.src" value="${test.dir}/unit"/>
@@ -143,6 +145,18 @@
     <property name="jacoco.partials.dir" value="${jacoco.export.dir}/partials" />
     <property name="jacoco.partialexecfile" value="${jacoco.partials.dir}/partial.exec" />
     <property name="jacoco.finalexecfile" value="${jacoco.export.dir}/jacoco.exec" />
+
+    <condition property="isMac" value="true">
+        <os family="mac"/>
+    </condition>
+    <condition property="isLinux" value="true">
+        <and>
+            <os family="unix"/>
+            <not>
+                <os family="mac"/>
+            </not>
+        </and>
+    </condition>
 
     <property name="jflex.version" value="1.8.2"/>
     <property name="jamm.version" value="0.4.0"/>
@@ -262,6 +276,7 @@
         <string>--add-opens jdk.compiler/com.sun.tools.javac=ALL-UNNAMED</string>
         <string>--add-opens java.base/java.lang=ALL-UNNAMED</string>
         <string>--add-opens java.base/java.util=ALL-UNNAMED</string>
+        <string>--add-opens java.base/java.nio=ALL-UNNAMED</string>
 
         <string>--add-opens java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED</string>
     </resources>
@@ -520,6 +535,7 @@
 
     <!-- Stress build file -->
     <property name="stress.build.src" value="${basedir}/tools/stress/src" />
+    <property name="stress.build.resources" value="${basedir}/tools/stress/resources" />
     <property name="stress.test.src" value="${basedir}/tools/stress/test/unit" />
     <property name="stress.build.classes" value="${build.classes}/stress" />
     <property name="stress.test.classes" value="${build.dir}/test/stress-classes" />
@@ -546,13 +562,13 @@
         <javac compiler="modern" debug="true" debuglevel="${debuglevel}"
                source="${ant.java.version}" target="${ant.java.version}"
                encoding="utf-8" destdir="${stress.build.classes}" includeantruntime="true">
-            <src path="${stress.build.src}" />
+            <src path="${stress.build.src}"/>
             <classpath>
                 <path refid="cassandra.classpath" />
             </classpath>
         </javac>
         <copy todir="${stress.build.classes}">
-            <fileset dir="${stress.build.src}/resources" />
+            <fileset dir="${stress.build.resources}" />
         </copy>
     </target>
 
@@ -610,7 +626,7 @@
         </javac>
     </target>
 
-    <target name="fqltool-test" depends="fqltool-build-test, build-test" description="Runs fqltool tests">
+    <target name="fqltool-test" depends="fqltool-build-test, maybe-build-test" description="Runs fqltool tests">
         <testmacro inputdir="${fqltool.test.src}"
                        timeout="${test.timeout}">
         </testmacro>
@@ -958,28 +974,6 @@
       </checksum>
     </target>
 
-  <target name="build-jmh" depends="build-test, jar" description="Create JMH uber jar">
-      <jar jarfile="${build.test.dir}/deps.jar">
-          <zipgroupfileset dir="${test.lib}/jars">
-              <include name="*jmh*.jar"/>
-              <include name="jopt*.jar"/>
-              <include name="commons*.jar"/>
-              <include name="junit*.jar"/>
-              <include name="hamcrest*.jar"/>
-          </zipgroupfileset>
-          <zipgroupfileset dir="${build.lib}" includes="*.jar"/>
-      </jar>
-      <jar jarfile="${build.test.dir}/benchmarks.jar">
-          <manifest>
-              <attribute name="Main-Class" value="org.openjdk.jmh.Main"/>
-          </manifest>
-          <zipfileset src="${build.test.dir}/deps.jar" excludes="META-INF/*.SF" />
-          <fileset dir="${build.classes.main}"/>
-          <fileset dir="${test.classes}"/>
-          <fileset dir="${test.conf}" />
-      </jar>
-  </target>
-
   <!-- Wrapper of build-test without dependencies, so both that target and its dependencies are skipped if the property
     no-build-test is true. This is meant to be used to run tests without actually building them, provided that they have
     been built before. All test targets depend on this, so one can run them using the no-build-test property.
@@ -1039,18 +1033,40 @@
     </copy>
   </target>
 
+    <macrodef name="check-test-names">
+        <attribute name="annotationName"/>
+        <attribute name="regex"/>
+        <attribute name="scanClassPath" default="${test.classes}:${fqltool.test.classes}:${stress.test.classes}"/>
+        <attribute name="packageName" default="org.apache.cassandra"/>
+        <attribute name="expand" default="true"/>
+        <attribute name="normalize" default="true"/>
+        <attribute name="verbose" default="false"/>
+
+        <sequential>
+            <java taskname="check-test-names" fork="true" failonerror="yes" classname="org.apache.cassandra.anttasks.TestNameCheckTask">
+                <classpath>
+                    <path refid="cassandra.classpath.test"/>
+                    <pathelement location="${fqltool.build.classes}"/>
+                    <pathelement location="${stress.build.classes}"/>
+                    <pathelement location="${test.classes}"/>
+                    <pathelement location="${fqltool.test.classes}"/>
+                    <pathelement location="${stress.test.classes}"/>
+                </classpath>
+                <jvmarg line="${java-jvmargs}"/>
+                <jvmarg value="-DscanClassPath=@{scanClassPath}"/>
+                <jvmarg value="-DpackageName=@{packageName}"/>
+                <jvmarg value="-DannotationName=@{annotationName}"/>
+                <jvmarg value="-Dexpand=@{expand}"/>
+                <jvmarg value="-Dnormalize=@{normalize}"/>
+                <jvmarg value="-Dverbose=@{verbose}"/>
+                <jvmarg value="-Dregex=@{regex}"/>
+            </java>
+        </sequential>
+    </macrodef>
+
   <target name="_check-test-names">
-    <java taskname="check-test-names" fork="true" failonerror="yes" classname="org.apache.cassandra.anttasks.TestNameCheckTask" classpath="${test.classes}">
-      <classpath>
-        <path refid="cassandra.classpath" />
-        <pathelement location="${test.classes}"/>
-        <pathelement location="${fqltool.build.classes}" />
-        <fileset dir="${test.lib}">
-          <include name="**/*.jar" />
-        </fileset>
-      </classpath>
-      <jvmarg line="${java-jvmargs}"/>
-    </java>
+      <check-test-names annotationName="org.junit.Test" regex=".*Test$"/>
+      <check-test-names annotationName="org.openjdk.jmh.annotations.Benchmark" regex=".*(Bench|_jmhType.*)$"/>
   </target>
 
   <!-- Run tests separately and report errors after and generate a junit report -->
@@ -1136,7 +1152,7 @@
         <jvmarg value="-Dcassandra.test.sstableformatdevelopment=true"/>
         <!-- The first time SecureRandom initializes can be slow if it blocks on /dev/random -->
         <jvmarg value="-Djava.security.egd=file:/dev/urandom" />
-        <jvmarg value="-Dcassandra.testtag=@{testtag}.jdk${ant.java.version}${testtag.extra}"/>
+        <jvmarg value="-Dcassandra.testtag=@{testtag}_jdk${ant.java.version}${testtag.extra}"/>
         <jvmarg value="-Dcassandra.keepBriefBrief=${cassandra.keepBriefBrief}" />
         <jvmarg value="-Dcassandra.strict.runtime.checks=true" />
         <jvmarg value="-Dcassandra.reads.thresholds.coordinator.defensive_checks_enabled=true" /> <!-- enable defensive checks -->
@@ -1826,36 +1842,12 @@
       </concat>
   </target>
 
-  <!-- run microbenchmarks suite -->
-  <target name="microbench" depends="build-jmh">
-      <java classname="org.openjdk.jmh.Main"
-            fork="true"
-            failonerror="true">
-          <classpath>
-              <path refid="cassandra.classpath.test" />
-              <pathelement location="${test.classes}"/>
-              <pathelement location="${test.conf}"/>
-              <fileset dir="${test.lib}">
-                  <include name="**/*.jar" />
-              </fileset>
-          </classpath>
-          <arg value="-foe"/>
-          <arg value="true"/>
-          <arg value="-rf"/>
-          <arg value="json"/>
-          <arg value="-rff"/>
-          <arg value="${build.test.dir}/jmh-result.json"/>
-          <arg value="-v"/>
-          <arg value="EXTRA"/>
-          <jvmarg line="${java-jvmargs}"/>
-          <jvmarg line="${_std-test-jvmargs}"/>
-          <jvmarg line="${test.jvm.args}"/>
+  <target name="microbench" depends="jar">
+    <antcall target="-microbench" inheritrefs="true"/>
+  </target>
 
-          <!-- Broken: ZeroCopyStreamingBench,MutationBench,FastThreadLocalBench  (FIXME) -->
-          <arg value="-e"/><arg value="ZeroCopyStreamingBench|MutationBench|FastThreadLocalBench"/>
-
-          <arg value=".*microbench.*${benchmark.name}"/>
-      </java>
+  <target name="microbench-with-profiler" depends="jar">
+    <antcall target="-microbench-with-profiler" inheritrefs="true"/>
   </target>
 
   <!-- run arbitrary mains in tests, for example to run the long running memory tests with lots of memory pressure
@@ -2077,4 +2069,6 @@
   <import file="${build.helpers.dir}/build-git.xml"/>
   <import file="${build.helpers.dir}/build-checkstyle.xml"/>
   <import file="${build.helpers.dir}/build-cqlsh.xml"/>
+  <import file="${build.helpers.dir}/build-bench.xml"/>
+  <import file="${build.helpers.dir}/build-sonar.xml"/>
 </project>
